# Ucode-marathon-c-

sprint00/: .gitignore
sprint00/t00/: CMakeLists.txt
sprint00/t01/: printDialog.h
sprint00/t02/: CMakeLists.txt  main.cpp  walletManager.cpp
sprint00/t04/: referenceOrPointer.cpp
sprint00/t05/: CMakeLists.txt  main.cpp
sprint00/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
sprint00/t07/: CMakeLists.txt  main.cpp
sprint00/t07/src/: commands.cpp  commands.h
sprint01/: .gitignore
sprint01/t00/: CMakeLists.txt  main.cpp
sprint01/t01/: CMakeLists.txt  main.cpp
sprint01/t02/: CMakeLists.txt  main.cpp
sprint01/t02/src/: towns.cpp  towns.h
sprint01/t03/: CMakeLists.txt  main.cpp
sprint01/t03/src/: rabbits.cpp  rabbits.h
sprint01/t04/: CMakeLists.txt  main.cpp
sprint01/t05/: CMakeLists.txt  main.cpp
sprint02/t00/: CMakeLists.txt  example...............tx  example.............._mod.tx  main.cpp
sprint02/t00/src/: CMakeLists.txt
sprint02/t01/: CMakeLists.txt  example....................  example..................._mod.  main.cpp
sprint02/t02/: CMakeLists.txt  main.cpp
sprint02/t02/src/: CMakeLists.txt  validate.cpp  validate.h
sprint02/t03/: CMakeLists.txt  main.cpp
sprint02/t03/src/: validate.cpp  validate.h
sprint03/: .gitignore
sprint03/t00/: templateAddition.h
sprint03/t01/: outputAny.h
sprint03/t02/: sumOfArguments.h
sprint03/t03/: sumFileData.h
sprint03/t04/: outputContainer.h
sprint03/t05/: squareValue.h
sprint03/t06/: isPalindrome.h
sprint03/t07/: sortValues.h
sprint04/: .gitignore
sprint04/t00/utils/: algorithmUtils.h
sprint04/t01/app/: main.cpp
sprint04/t01/app/src/: Axe.cpp  Axe.h  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h
sprint04/t02/app/: main.cpp
sprint04/t02/app/src/: Dragonborn.cpp  Dragonborn.h
sprint04/t03/app/: CMakeLists.txt  main.cpp
sprint04/t03/app/src/: CMakeLists.txt  Calculator.cpp  Calculator.h  Expression.cpp  Expression.h
sprint05/t00/app/: main.cpp
sprint05/t00/app/src/: Draugr.cpp  Draugr.h
sprint05/t01/app/: main.cpp
sprint05/t01/app/src/: Draugr.cpp  Draugr.h
sprint05/t02/app/: main.cpp
sprint05/t02/app/src/: Draugr.cpp  Draugr.h
sprint05/t03/app/: main.cpp
sprint05/t04/app/: main.cpp
sprint06/t00/app/: main.cpp
sprint06/t01/app/: CMakeLists.txt  main.cpp
sprint06/t02/app/: CMakeLists.txt  main.cpp
sprint07/t00/app/: main.cpp
sprint07/t01/app/: CMakeLists.txt  main.cpp
sprint08/t00/app/: CMakeLists.txt  main.cpp
sprint08/t01/app/: CMakeLists.txt  main.cpp
sprint08/t02/app/: CMakeLists.txt  main.cpp
sprint08/t03/app/: CMakeLists.txt  main.cpp
sprint08/t04/app/: CMakeLists.txt  main.cpp
sprint08/t04/app/src/: CMakeLists.txt  Serializer.h
sprint09/: .gitignore
sprint09/t00/app/: main.cpp
sprint09/t01/app/: main.cpp
sprint09/t02/app/: main.cpp
sprint09/t03/app/: main.cpp
sprint09/t04/app/: main.cpp
sprint09/t05/app/: main.cpp
(+88 files in other folders)
